--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- starter HTML code -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,57 +10,47 @@
     <style>
     </style>
 </head>
-
+<!-- added the tittle/created my rows/colums -->
 <body>
-    <div class="container">
-        <h1 id="temp">
-        </h1>
-        <p id="desc"></p>
-
-        <form id="form">
-            <input id="city" type="leters" placeholder="Enter city here" title="Please Enter a valid City"
-                pattern="(/^[A-Za-z]+$/)">
-            <button type="submit">Search</button>
-        </form>
+    <h1>Check the Weather</h1>
+    <div class="container-main">
+        <div class="row">
+            <div class="col-12 col-md-3 col-xl-3 colOne"></div>
+            <label>Enter city name here</label>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control textVal" placeholder="Heber...">
+                <button class="btn btn-primary search" type="button" id="button-addon2"><i
+                        class="fas fa-search"></i></button>
+            </div>
+        <!-- added my container for the search city history -->
+        <div class="container cityHist"></div>
+<!--styling my container for the weather "today" -->
     </div>
+    <div class="col-12 col-md-3 col-xl-9 colTwo">
+        <div class="row today">
+            <div class="card bg-light mb-3 " style="max-width: 400px;">
+                <h2 class="card-header cardTodayCityName"></h2>
+                <h3 class="card-header cardTodayDate"></h3>
+                <img class="icons" />
+                <div class="card-body cardBodyToday">
+                </div>
+            </div>
 
-    <!--get Element refrences -->
-    <script>
-        const tempEL = document.getElementById("temp")
-        const descEl = document.getElementById("desc")
-        const formEl = document.getElementById("form")
-        const cityInput = document.getElementById("city")
 
-        // definded the event listners
-        formEl.addEventListener("submit", (e) => {
-            e.preventDefault()
-            const city = cityInput.value
-            getWeather(city)
-        })
-
-        function getWeather(city) {
-            const apiKey = ""
-            const units = ""
-            const path = ""
-            fetch(path)
-                .then(res => res..json())
-                .then(json => {
-                    tempEL.innerHTML = json.main.temp
-                    descEl.innerHTML = json.weather[0].description
-
-                })
-
-                .catch(err => console.log(err.message))
-        }
-</script>
-
-        
-       <script src = " https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
-    </script>
+        </div>
+<!-- added my class needed for the five day forcast row -->
+        <div class="row fiveForecast"></div>
+    </div>
+</div>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+  crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/scripts.js"></script>
 </body>
-
 </html>
