changes the container box sizing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <div class="container cityHist"></div> 
     <!--styling my container for the weather "today" -->
     </div>
-    <div class="col-12 col-md-3 col-xl-9 colTwo">
+    <div class="col-md-3 col-xl-9">
         <div class="row today">
             <div class="card bg-light mb-3 " style="max-width: 400px;">
                 <h2 class="card-header cardTodayCityName"></h2>
