--- a/index.html
+++ b/index.html
@@ -1,65 +1,62 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-   
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="../check-the-forecast/assets/css/style.css">
-        <title>Work Day Scheduler</title>
-    <style>
-    </style>
-</head> 
-    <!-- added the tittle/created my rows/colums -->
-
-     <body>
-    <h1>Check the Weather</h1>
-    <div class="container-main">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../check-the-forecast/assets/css/style.css">
+    <title>Weather Dashboard</title>
+</head>
+ <!-- added the tittle/created my rows/colums -->
+<body>
+    <h1>Weather Dashboard</h1>
+    <div class="container">
         <div class="row">
-            <div class="col-12 col-md-3 col-xl-3 colOne"></div>
-            <label>Enter city name here</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control textVal" placeholder="Heber City...">
-                <button class="btn btn-primary search" type="button" id="button-addon2"><i
-                        class="fas fa-search"></i></button>
-            </div> 
-    <!-- added my container for the search city history -->
-     <div class="container cityHist"></div> 
-    <!--styling my container for the weather "today" -->
-    </div>
-    <div class="col-md-3 col-xl-9">
-        <div class="row today">
-            <div class="card bg-light mb-3 " style="max-width: 400px;">
-                <h2 class="card-header cardTodayCityName"></h2>
-                <h3 class="card-header cardTodayDate"></h3>
-                <img class="icons" />
-                <div class="card-body cardBodyToday">
+            <div class="col-12 col-md-2 col-xl-3 colOne">
+                <label>Search for a City:</label>
+
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control textVal" placeholder="Heber...">
+                    <div class="input-group-append btnPar">
+                        <button class="btn btn-primary search" type="button" id="button-addon2"><i
+                                class="fas fa-search"></i></button>
+                    </div>
                 </div>
+<!-- added my container for the search city history -->
+                <div class="container cityHist"></div>
+<!--styling my container for the weather "today" -->
             </div>
+            <div class="col-12 col-md-9 col-xl-9 colTwo">
 
+                <div class="row today">
 
-        </div>
-        <!-- added my class needed for the five day forcast row -->
-        <div class="row fiveForecast"></div>
-    </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="../check-the-forecast/assets/js/index.js"></script>
-    
-    </body>
+                    <div class="card bg-light mb-3 " style="max-width: 400px;">
+                        <h2 class="card-header cardTodayCityName"></h2>
+                        <h3 class="card-header cardTodayDate"></h3>
+                        <img class="icons" />
+                        <div class="card-body cardBodyToday">
+                        </div>
+                    </div>
+
+                </div>
+<!-- added my class needed for the five day forcast row -->
+                <div class="row fiveForecast"></div>
+
+            </div>
+            <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+                integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+            <script src="../check-the-forecast/assets/js/index.js"></script>
+</body>
 
 </html>
+
+
