--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet" />
+
     <link rel="stylesheet" href="../check-the-forecast/assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
- <!-- added the tittle/created my rows/colums -->
+<!-- added the tittle/created my rows/colums -->
+
 <body>
-    <h1>Weather Dashboard</h1>
+    <h1>Check The Forecast</h1>
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-2 col-xl-3 colOne">
@@ -27,15 +30,14 @@
                                 class="fas fa-search"></i></button>
                     </div>
                 </div>
-<!-- added my container for the search city history -->
+                <!-- added my container for the search city history -->
                 <div class="container cityHist"></div>
-<!--styling my container for the weather "today" -->
+                <!--styling my container for the weather "today" -->
             </div>
             <div class="col-12 col-md-9 col-xl-9 colTwo">
 
                 <div class="row today">
-
-                    <div class="card bg-light mb-3 " style="max-width: 400px;">
+                    <div class="card bg-light mb-3" style="max-width: 400px;">
                         <h2 class="card-header cardTodayCityName"></h2>
                         <h3 class="card-header cardTodayDate"></h3>
                         <img class="icons" />
@@ -44,8 +46,11 @@
                     </div>
 
                 </div>
-<!-- added my class needed for the five day forcast row -->
+                <!-- added my class needed for the five day forcast row -->
                 <div class="row fiveForecast"></div>
+            
+
+
 
             </div>
             <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -58,5 +63,3 @@
 </body>
 
 </html>
-
-
