working on my README.md

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="../check-the-forecast/assets/css/style.css">
-    <title>Weather Dashboard</title>
+    <title>Check The Forecast</title>
 </head>
 
 <body>
-    <h1>Weather Dashboard</h1>
+    <h1>Check The Forecast</h1>
     <div class="container-fluid mainCon">
         <div class="row">
             <div class="col-12 col-md-3 col-xl-3 colOne">
@@ -59,3 +59,5 @@
 </body>
 
 </html>
+
+<img src="../check-the-forecast/assets/css/images/screen-shot.png" alt="">
