--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control textVal" placeholder="Heber...">
                     <div class="input-group-append btnPar">
-                        <button class="btn btn-primary search" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
+                        <button class="btn btn-primary search" type="button" id="button-addon2"><i
+                                class="fas fa-search"></i></button>
                     </div>
                 </div>
 
@@ -39,7 +40,7 @@
                     <div class="card bg-light mb-3 " style="max-width: 400px;">
                         <h2 class="card-header cardTodayCityName"></h2>
                         <h3 class="card-header cardTodayDate"></h3>
-                        <img class="icons"/>
+                        <img class="icons" />
                         <div class="card-body cardBodyToday">
                         </div>
                     </div>
@@ -59,5 +60,3 @@
 </body>
 
 </html>
-
-<img src="../check-the-forecast/assets/css/images/screen-shot.png" alt="">
