--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../check-the-forecast/assets/css/style.css">
     <title>Check The Forecast</title>
 </head>
+<!-- title and header info -->
 
 <body>
     <h1>Check The Forecast</h1>
@@ -21,7 +22,7 @@
         <div class="row">
             <div class="col-12 col-md-3 col-xl-3 colOne">
                 <label>Search for a City:</label>
-
+                <!-- search bar for user to text desired city  -->
                 <div class="input-group mb-3">
                     <input type="text" class="form-control textVal" placeholder="Heber...">
                     <div class="input-group-append btnPar">
@@ -29,14 +30,11 @@
                                 class="fas fa-search"></i></button>
                     </div>
                 </div>
-
+                <!-- below will hold the users search history -->
                 <div class="container cityHist"></div>
-
             </div>
             <div class="col-12 col-md-9 col-xl-9 colTwo">
-
                 <div class="row today">
-
                     <div class="card bg-light mb-3 " style="max-width: 400px;">
                         <h2 class="card-header cardTodayCityName"></h2>
                         <h3 class="card-header cardTodayDate"></h3>
@@ -44,11 +42,8 @@
                         <div class="card-body cardBodyToday">
                         </div>
                     </div>
-
                 </div>
-
                 <div class="row fiveForecast"></div>
-
             </div>
             <script src="https://code.jquery.com/jquery-3.5.1.min.js"
                 integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
